# n-body-simulation

./: Cargo.toml
src/: camera.rs  drawing.rs  lib.rs  main.rs  shader.wgsl
src/nbody_sim/: body.rs  mod.rs  simulation.rs
