[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4"
wgpu = "0.19.0"
image = "0.24.8"
winit = {version = "0.29.9", features = ["rwh_05"]}
tokio = { version = "1.35.1", features = ["full"] }
bytemuck = { version= "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
rand = "0.8.5"
fastrand = "2.0.1"